# shocker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: Cog.cmake  Colours.cmake  Doxygen.cmake  FindCrypto++.cmake  Git.cmake  LavaTargets.cmake  NLohmannJSON.cmake  Platform.cmake  Qt.cmake  Ronn.cmake  Sphinx.cmake
include/: shocker.hpp
src/shocker/: battery.cpp  battwin.cpp  mainloop.cpp  stylesheet.css
